--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -6,12 +6,14 @@
 * {
     box-sizing: border-box;
     /* color: #400611; */
-    font-family: "Cormorant Upright", sans-serif;
+    font-family:  "Linden Hill", serif;
     scroll-behavior: smooth; /* Add this line */
 }
 
 body {
     color: #7E4B5E;
+    /* color: rgba(0, 0, 0, .6); */
+    font-size: 16px;
     
 }
 .pinyon-regular {
